--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="assets/styles/styles.css">
 </head>
 
 <body>
@@ -116,7 +117,7 @@
                     <h2>Kota Bandung</h2>
                     <p>Kota Kembang Paris van Java</p>
                     <figure>
-                        <img src="assets/image/bandung-badge.png">
+                        <img src="assets/image/Bandung_coa.png">
                         <figcaption>Lambang</figcaption>
                     </figure>
                 </header>
