--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
 <body>
     <header>
-        <h1>Bandung</h1>
-        <p>Kota metropolitan terbesar di Provinsi Jawa Barat, sekaligus menjadi ibu kota provinsi tersebut.</p>
+        <div class="jumbotron">
+            <h1>Bandung</h1>
+            <p>Kota metropolitan terbesar di Provinsi Jawa Barat, sekaligus menjadi ibu kota provinsi tersebut.</p>
+        </div>
         <nav>
             <ul>
                 <li><a href="#sejarah">Sejarah</a></li>
@@ -23,9 +25,9 @@
     </header>
     <main>
         <div id="content">
-            <article id="sejarah">
+            <article id="sejarah" class="card">
                 <h2>Sejarah</h2>
-                <img src="assets/image/history.jpg" alt="sejarah">
+                <img src="assets/image/history.jpg" class="featured-image" alt="sejarah">
                 <p>
                     Kata Bandung berasal dari kata bendung atau bendungan karena terbendungnya sungai Citarum oleh lava
                     Gunung
@@ -50,9 +52,9 @@
                 </p>
             </article>
 
-            <article id="geografis">
+            <article id="geografis" class="card">
                 <h2>Geografis</h2>
-                <img src="assets/image/geografis.jpg" alt="geografis">
+                <img src="assets/image/geografis.jpg" class="featured-image" alt="geografis">
                 <p>
                     Kota Bandung dikelilingi oleh pegunungan, sehingga bentuk morfologi wilayahnya bagaikan sebuah
                     mangkok raksasa,
@@ -72,7 +74,7 @@
                 </p>
             </article>
 
-            <article id="wisata">
+            <article id="wisata" class="card">
                 <h2>Wisata</h2>
                 <p>
                     Sejak dibukanya Jalan Tol Cipularang, kota Bandung telah menjadi tujuan utama dalam menikmati
@@ -83,7 +85,7 @@
                 </p>
                 <section>
                     <h3>Farm House Lembang</h3>
-                    <img src="assets/image/farm-house.jpg" alt="farm house">
+                    <img src="assets/image/farm-house.jpg" class="featured-image" alt="farm house">
                     <p>
                         Berada di jalur utama Bandung-Lembang, Farm House menjadi objek wisata yang tidak pernah sepi
                         pengunjung. Selain
@@ -94,7 +96,7 @@
                 </section>
                 <section>
                     <h3>Observatorium Bosscha</h3>
-                    <img src="assets/image/bosscha.jpg" alt="bosscha">
+                    <img src="assets/image/bosscha.jpg" class="featured-image" alt="bosscha">
                     <p>
                         Memiliki beberapa teleskop, antara lain, Refraktor Ganda Zeiss, Schmidt Bimasakti, Refraktor
                         Bamberg, Cassegrain
@@ -112,7 +114,7 @@
             </article>
         </div>
         <aside>
-            <article>
+            <article class="profile card">
                 <header>
                     <h2>Kota Bandung</h2>
                     <p>Kota Kembang Paris van Java</p>
